--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
     
     <div class="container">
-        <img src="https://via.placeholder.com/150" alt="Aisling Harris">
+        <img src="pic.jpg" alt="Aisling Harris">
         
         <div class="section" id="about">
             <h2>About Me</h2>
