--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
     
     <div class="container">
-        <img src="pic.jpg" alt="Aisling Harris">
+        <img src="https://media.licdn.com/dms/image/v2/D4E03AQHILznXNmoIww/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1719915219761?e=1746662400&v=beta&t=8QDCAnv_EcskrrIdvFMxXW_-pVJdVs7lIvsqQ8O6G-c" alt="Aisling Harris">
         
         <div class="section" id="about">
             <h2>About Me</h2>
